--- a/public/edit.css
+++ b/public/edit.css
@@ -118,7 +118,7 @@ input[type="submit"]:hover {
 }
 
 input[type="text"] {
-    background-color: #b2beb5;
+    background-color: black;
     border: 2px;
     outline: whitesmoke;
     color: white;
