--- a/views/input/new.ejs
+++ b/views/input/new.ejs
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="navbar">
-                <a href="">
+                <a href="/messages">
                     <span class="icon"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></span>
                     <span class="text">Message</span>
                 </a>
