--- a/views/input/show.ejs
+++ b/views/input/show.ejs
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="navbar">
-                    <a href="">
+                    <a href="/messages">
                         <span class="icon">
                             <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
                         </span>
@@ -86,7 +86,7 @@
         <div class="formEdit">
             
                 <form action="/input/<%= input._id %>?_method=DELETE" method="POST">
-                    <input type="submit" value="Delete" />
+                    <input type="submit" value="Delete Input">
                 </form>
            
                 <a href="/input/<%= input._id %>/edit">
