--- a/public/index.css
+++ b/public/index.css
@@ -10,16 +10,17 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1490938182925-d897c6d99d0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80");
+    background-image: url("https://images.unsplash.com/photo-1645570072967-82ceaea33b81?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80");
     backdrop-filter: blur(5px);
     background-size: contain;
 }
 
 .container {
-    background: #000000d0;
-    opacity: 0.8;
-    background-image: url("https://images.unsplash.com/photo-1490938182925-d897c6d99d0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80");
-    background-size: contain;
+    background: #282828;
+    opacity: 0.9;
+    background-image: url("https://images.unsplash.com/photo-1645570072967-82ceaea33b81?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80");
+    background-size: cover;
+    background-repeat: no-repeat;
     color: whitesmoke;
     height: 60vh;
     width: 100vh;
@@ -105,7 +106,7 @@ h1 {
     left: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 4em;
-    color: #CAFAFE;
+    color: whitesmoke;
     filter: drop-shadow(7px 7px 7px black);
 }
 
