--- a/views/messages/index.ejs
+++ b/views/messages/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/edit.css">
+    <link rel="stylesheet" href="/indexM.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <title>LL&EAT</title>
@@ -43,11 +43,11 @@
                     </a>
                 </li>
                 <li class="navbar">
-                    <a href="/messages">
+                    <a href="/messages/new">
                         <span class="icon">
-                            <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+                            <ion-icon name="chatbox-outline"></ion-icon>
                         </span>
-                        <span class="text">Message</span>
+                        <span class="text">New Message</span>
                     </a>
                 </li>
                 <li class="navbar">
@@ -60,16 +60,20 @@
                 </li>
             </ul>
         </div>
-        <h1>Edit <%= input.name %>'s Info</h1>
-        <main>
-            <form action="/input/<%= input._id %>?_method=PUT" method="POST">
-                <ion-icon name="person-circle-outline"></ion-icon> <input type="text" name="name" placeholder="name" value="<%= input.name %>" /><br />
-                <ion-icon name="fast-food-outline"></ion-icon> <input type="text" name="food" placeholder="food" value="<%= input.food %>" /><br />
-                <ion-icon name="time-outline"></ion-icon> <input type="text" name="time" placeholder="time" value="<%= input.time %>" /><br />
-                <ion-icon name="location-outline"></ion-icon> <input type="text" name="location" placeholder="location" value="<%= input.location %>" /><br />
-                <input type="submit" value="Update" />
-            </form>
-        </main>
+
+    <main>
+        <h2>List of Messages</h2>
+        <ul>
+            <% for(let i=0; i < messages.length; i++){ %>
+                <li>
+                    <a href="/messages/<%=messages[i]._id%>">
+                        <%= messages[i].name %> </br>
+                    </a>
+                    <%= messages[i].body %>
+                </li>
+                <% } %>
+        </ul>
+    </main>
     </div>
 </body>
 
